Fix #35272: cycles GPU crash with anisotropic shader in group node.

Problem was that due to group proxy node the anisotropic node did not detect
early enough that it needs generated texture coordinate data to generate the
tangent. Now the proxy nodes are removed earlier.